fixed search box/input alignment

--- a/bio2rdf/website/css/main.css
+++ b/bio2rdf/website/css/main.css
@@ -109,8 +109,9 @@ font-size: 100%;
 .search {
 margin-left: auto;
 margin-right: auto;
-width: 550px;
+width: 600px;
 /*padding-left: 30px ;*/
+ vertical-align: middle;
 }
 
 .search p{
@@ -124,9 +125,13 @@ height: 40px;
 font-size: 20px;
 width:490px;
 margin:0;
+ vertical-align: middle;
+
 }
 
 #search-form button{
+ vertical-align: middle;
+margin: 0;
 background: white;
 height: 43px;
 border: 1px solid orange;
